# iweioo-platform

./: .env.example  .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  tsconfig.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  robots.ts
app/[locale]/: layout.tsx  page.tsx
apps/account/: proxy.ts  (+4 more)
apps/api/: .env.example  README.md  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260710_0001_account_profile_consent.py  20260712_0002_application_registry.py
apps/api/src/iweioo_api/: cli.py  config.py  database.py  errors.py  main.py  models.py
apps/api/src/iweioo_api/modules/: __init__.py
apps/api/src/iweioo_api/modules/account/: __init__.py  router.py  schemas.py  service.py
apps/api/src/iweioo_api/modules/applications/: __init__.py  manifest.py  schemas.py  service.py
apps/api/src/iweioo_api/modules/auth/: __init__.py  dependencies.py  jwks.py  models.py
apps/api/src/iweioo_api/modules/health/: __init__.py  router.py
apps/api/tests/: conftest.py  test_account.py  test_applications.py  test_auth.py  test_config.py  test_health.py  test_postgres.py
apps/worker/: README.md  pyproject.toml
apps/worker/src/iweioo_worker/: main.py
apps/worker/tests/: test_worker.py
components/: CursorHalo.tsx  EditorialPostCard.tsx  FeaturedProjectCarousel.tsx  HomeBridge.tsx  ParticleBackdrop.tsx
contracts/: README.md
data/: project-overrides.ts  site.ts
deploy/: README.md
docs/: deployment.md
lib/: i18n.ts  posts.ts  projects.ts
scripts/: run-typescript-7.mjs  sync-projects.ts
tests/: contracts.test.ts
(+101 files in other folders)
